test/functions/vass/return-type-function-failure.good
return-type-function-failure.chpl:4: error: cannot use a function as a type, unless it is an invocation of a type function
